# tadgan-demo

./: .gitignore  pyproject.toml  sample.ipynb
tadgan/: metrics.py
