[tool.poetry]
name = "tadgan"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.1"
pandas = "^1.5.0"
mlem = "^0.2.8"
torch = "^1.12.1"
numpy = "^1.23.3"
tqdm = "^4.64.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
